testsuite/bsc.interra/bugs/bugID334/Design_case.bsv.bsc-out.expected
checking package dependencies
Error: "Design_case.bsv", line 5, column 20: (P0005)
  Unexpected V2K keyword `case'; expected method name
